// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component should render child components correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  testID="menu-portal-test-id"
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#F5F5F5",
          "borderColor": "#E0E0E0",
          "borderRadius": 5,
          "borderWidth": 0.5,
          "paddingBottom": 2,
          "paddingTop": 2,
          "transform": [
            {
              "translateX": 0,
            },
            {
              "translateY": 3,
            },
          ],
        }
      }
    >
      <Text
        collapsable={false}
        style={{}}
      >
        Child
      </Text>
    </View>
  </View>
</Modal>
`;

exports[`Menu component should render correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  testID="menu-portal-test-id"
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#F5F5F5",
          "borderColor": "#E0E0E0",
          "borderRadius": 5,
          "borderWidth": 0.5,
          "paddingBottom": 2,
          "paddingTop": 2,
          "transform": [
            {
              "translateX": 0,
            },
            {
              "translateY": 3,
            },
          ],
        }
      }
    />
  </View>
</Modal>
`;
